--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderEdit.cshtml
@@ -50,7 +50,7 @@
 
                 <div class="card">
                     <div class="grid-row">
-                        <div class="grid-column small-8 medium-8 large-8">
+                        <div class="grid-column small-6 medium-6 large-6">
                             <div class="box" data-has-error="controller.saleOrderForm.store.$invalid">
                                 <label>
                                     <span data-translate="Store"></span>
@@ -62,13 +62,30 @@
                                         data-ng-disabled="controller.searchingStores"></select>
                             </div>
                         </div>
-                        <div class="grid-column small-4 medium-4 large-4">
-                            <div class="box" data-has-error="controller.saleOrderForm.issueDate.$invalid">
-                                <label>
-                                    <span data-translate="Issue date"></span>
-                                    <span class="text-danger">*</span>
-                                </label>
-                                <input type="text" name="issueDate" data-ng-model="controller.saleOrder.issueDate" data-type-date required />
+                        <div class="grid-column small-6 medium-6 large-6">
+                            <div class="grid-row">
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <div class="box" data-has-error="controller.saleOrderForm.issueDate.$invalid">
+                                        <label>
+                                            <span data-translate="Issue date"></span>
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="text" name="issueDate" data-ng-model="controller.saleOrder.issueDate" data-type-date required />
+                                    </div>
+                                </div>
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <div class="box">
+                                        <label>
+                                            <span data-translate="Wallet"></span>
+                                            <em class="font-10 text-muted" data-translate="Loading" data-ng-show="controller.searchingWallets"></em>
+                                        </label>
+                                        <select name="wallet" data-ng-model="controller.saleOrder.wallet"
+                                                data-ng-options="wallet as wallet.name for wallet in controller.walletList track by wallet.id"
+                                                data-ng-disabled="controller.searchingWallets">
+                                            <option value=""></option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
