--- a/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
@@ -26,17 +26,17 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/cash-flow/daily" class="as-button card success" disabled>
+            <a href="/cash-flow/daily" class="as-button card success">
                 <div class="card-info">
                     <div data-translate="Today"></div>
-                    <div class="value" data-ng-bind="controller.overview.counter.cashFlow | currency"></div>
+                    <div class="value" data-ng-bind="controller.overview.counter.cashFlowBalance | currency"></div>
                     <i class="fa fa-bar-chart"></i>
                 </div>
                 <div class="card-title">
                     <span data-translate="Cash flow"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
