Go back button in cash flow page

--- a/src/Dyoub.App/Views/Financial/CashFlow/DailyCashFlow.cshtml
+++ b/src/Dyoub.App/Views/Financial/CashFlow/DailyCashFlow.cshtml
@@ -15,6 +15,12 @@
         <a href="/cash-flow/monthly" class="step" data-translate="Monthly"></a>
     </div>
 
+    <div class="box">
+        <a href="/dashboard/financial" class="as-button">
+            <i class="fa fa-arrow-left"></i>
+        </a>
+    </div>
+
     <form name="controller.filterForm" data-ng-submit="controller.newSearch()">
         <label>
             <i class="fa fa-search"></i>
