--- a/src/Dyoub.App/Views/Financial/CashFlow/MonthlyCashFlow.cshtml
+++ b/src/Dyoub.App/Views/Financial/CashFlow/MonthlyCashFlow.cshtml
@@ -15,6 +15,12 @@
         <span class="step active" data-translate="Monthly"></span>
     </div>
 
+    <div class="box">
+        <a href="/dashboard/financial" class="as-button">
+            <i class="fa fa-arrow-left"></i>
+        </a>
+    </div>
+
     <form name="controller.filterForm" data-ng-submit="controller.newSearch()">
         <label>
             <i class="fa fa-search"></i>
