--- a/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
@@ -90,7 +90,7 @@
         </div>
 
         <div class="grid-column medium-6 large-4">
-            <a href="/dashboard/stock" class="as-button card carrot">
+            <a href="/dashboard/inventory" class="as-button card carrot">
                 <div class="card-info">
                     <div data-translate="Suppliers"></div>
                     <div data-translate="Products stock"></div>
