Fix redirect button

--- a/src/Dyoub.App/Views/Inventory/Suppliers/SupplierList.cshtml
+++ b/src/Dyoub.App/Views/Inventory/Suppliers/SupplierList.cshtml
@@ -15,7 +15,7 @@
     <div class="page-header" data-translate="Suppliers"></div>
 
     <div class="box">
-        <a href="/dashboard/commercial" class="as-button">
+        <a href="/dashboard/inventory" class="as-button">
             <i class="fa fa-arrow-left"></i>
         </a>
 
