Add bank reconciliation button to dashboard

--- a/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
@@ -68,6 +68,20 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
+            <button data-href="bank-reconciliation" class="as-button card success" disabled>
+                <div class="card-info">
+                    <div data-translate="This month"></div>
+                    <div class="value" data-ng-bind="controller.overview.counter.bankReconciliation"></div>
+                    <i class="fa fa-exchange"></i>
+                </div>
+                <div class="card-title">
+                    <span data-translate="Bank reconciliation"></span>
+                    <i class="fa fa-angle-right"></i>
+                </div>
+            </button>
+        </div>
+
+        <div class="grid-column compact-6 small-4 medium-4 large-3">
             <button data-href="receivables-anticipation" class="as-button card success" disabled>
                 <div class="card-info">
                     <div data-translate="This month"></div>
