Supplier of the purchase order

--- a/src/Dyoub.App/Views/Inventory/Suppliers/SupplierList.cshtml
+++ b/src/Dyoub.App/Views/Inventory/Suppliers/SupplierList.cshtml
@@ -1,4 +1,5 @@
-﻿@*<a href="/dashboard/commercial" class="as-button">
+﻿
+@*<a href="/dashboard/commercial" class="as-button">
                     <i class="fa fa-arrow-left"></i>
                 </a>
     Copyright (c) Dyoub Applications. All rights reserved.
