--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -42,7 +42,7 @@
         <div class="grid-column compact-6 small-4 medium-4 large-3">
             <a href="/sale-orders" class="as-button card emerald">
                 <div class="card-info">
-                    <div data-translate="Today"></div>
+                    <div data-translate="This month"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.saleOrders"></div>
                     <i class="fa fa-shopping-cart"></i>
                 </div>
