--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -19,7 +19,7 @@
             <span class="step active" data-translate="General"></span>
             <span class="separator"></span>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/supplier"
-               class="step" data-translate="Customer"></a>
+               class="step" data-translate="Supplier"></a>
             <span class="separator"></span>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/items"
                class="step" data-translate="Items"></a>
