--- a/src/Dyoub.App/Views/Catalog/PricingTables/PricingTableDetails.cshtml
+++ b/src/Dyoub.App/Views/Catalog/PricingTables/PricingTableDetails.cshtml
@@ -46,31 +46,20 @@
 
                 <div class="card">
                     <div class="grid-row">
-                        <div class="grid-column medium-6 large-6">
+                        <div class="grid-column small-6 medium-6 large-6">
                             <div class="box">
-                                <label data-translate="Item name"></label>
-                                <input type="text" data-ng-model="controller.filter.name" data-ng-maxlength="80" />
+                                <label data-translate="Item name or code"></label>
+                                <input type="text" data-ng-model="controller.filter.nameOrCode" data-ng-maxlength="80" />
                             </div>
                         </div>
-                        <div class="grid-column medium-6 large-6">
-                            <div class="grid-row">
-                                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                    <div class="box">
-                                        <label data-translate="Item code"></label>
-                                        <input type="text" data-ng-model="controller.filter.code" data-ng-maxlength="80" />
-                                    </div>
-                                </div>
-
-                                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                    <div class="box">
-                                        <label data-translate="Item type"></label>
-                                        <select data-ng-model="controller.filter.searchFor">
-                                            <option value="All" data-translate="All items"></option>
-                                            <option value="Products" data-translate="Only products"></option>
-                                            <option value="Services" data-translate="Only services"></option>
-                                        </select>
-                                    </div>
-                                </div>
+                        <div class="grid-column small-6 medium-6 large-6">
+                            <div class="box">
+                                <label data-translate="Item type"></label>
+                                <select data-ng-model="controller.filter.searchFor">
+                                    <option value="All" data-translate="All items"></option>
+                                    <option value="Products" data-translate="Only products"></option>
+                                    <option value="Services" data-translate="Only services"></option>
+                                </select>
                             </div>
                         </div>
                     </div>
