--- a/src/Dyoub.App/Views/Catalog/Services/ServiceList.cshtml
+++ b/src/Dyoub.App/Views/Catalog/Services/ServiceList.cshtml
@@ -29,19 +29,9 @@
             <span data-translate="Search filter"></span>
         </label>
         <div class="card">
-            <div class="grid-row">
-                <div class="grid-column small-8 medium-8 large-8">
-                    <div class="box">
-                        <label data-translate="Name"></label>
-                        <input type="text" data-ng-model="controller.filter.name" data-ng-maxlength="80" />
-                    </div>
-                </div>
-                <div class="grid-column small-4 medium-4 large-4">
-                    <div class="box">
-                        <label data-translate="Code"></label>
-                        <input type="text" data-ng-model="controller.filter.code" data-ng-maxlength="50" />
-                    </div>
-                </div>
+            <div class="box">
+                <label data-translate="Service name or code"></label>
+                <input type="text" data-ng-model="controller.filter.nameOrCode" data-ng-maxlength="80" />
             </div>
         </div>
 
