--- a/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
@@ -67,7 +67,7 @@
                             </div>
                             <div class="grid-column compact-6 small-6 medium-6 large-6">
                                 <label data-translate="Amount"></label>
-                                <strong data-ng-bind="item.quantity | number:(item.canSellFraction ? 3 : 0)"></strong>
+                                <strong data-ng-bind="item.quantity | number:(item.canFraction ? 3 : 0)"></strong>
                             </div>
                         </div>
                     </div>
