--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -21,8 +21,8 @@
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/supplier"
                class="step" data-translate="Supplier"></a>
             <span class="separator"></span>
-            <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/items"
-               class="step" data-translate="Items"></a>
+            <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/products"
+               class="step" data-translate="Products"></a>
             <span class="separator"></span>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/payments"
                class="step" data-translate="Payment"></a>
