--- a/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierEdit.cshtml
@@ -19,8 +19,8 @@
             <span class="separator"></span>
             <span class="step active" data-translate="Supplier"></span>
             <span class="separator"></span>
-            <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/items"
-               class="step" data-translate="Items"></a>
+            <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/products"
+               class="step" data-translate="Products"></a>
             <span class="separator"></span>
             <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/payments"
                class="step" data-translate="Payment"></a>
