--- a/src/Dyoub.App/Views/Commercial/SaleCustomer/SaleCustomerDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleCustomer/SaleCustomerDetails.cshtml
@@ -25,7 +25,7 @@
                class="step" data-translate="Items"></a>
             <span class="separator"></span>
             <a href="/sale-orders/details/{{controller.routeParams.saleOrderId}}/payments"
-               class="step" data-translate="Payment"></a>
+               class="step" data-translate="Payments"></a>
         </div>
     </div>
 
