--- a/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
@@ -23,7 +23,7 @@
             <a href="/sale-orders/edit/{{controller.routeParams.saleOrderId}}/items"
                class="step" data-translate="Items"></a>
             <span class="separator"></span>
-            <span class="step active" data-translate="Payment"></span>
+            <span class="step active" data-translate="Payments"></span>
         </div>
     </div>
 
