--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -25,7 +25,7 @@
                class="step" data-translate="Products"></a>
             <span class="separator"></span>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/payments"
-               class="step" data-translate="Payment"></a>
+               class="step" data-translate="Payments"></a>
         </div>
     </div>
 
