--- a/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsEdit.cshtml
@@ -23,7 +23,7 @@
             <span class="step active" data-translate="Items"></span>
             <span class="separator"></span>
             <a href="/sale-orders/edit/{{controller.routeParams.saleOrderId}}/payments"
-               class="step" data-translate="Payment"></a>
+               class="step" data-translate="Payments"></a>
         </div>
     </div>
 
