--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderEdit.cshtml
@@ -23,7 +23,7 @@
                class="step" data-translate="Items"></a>
             <span class="separator"></span>
             <a href="/sale-orders/edit/{{controller.routeParams.saleOrderId}}/payments"
-               class="step" data-translate="Payment"></a>
+               class="step" data-translate="Payments"></a>
         </div>
     </div>
 
