--- a/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierEdit.cshtml
@@ -23,7 +23,7 @@
                class="step" data-translate="Products"></a>
             <span class="separator"></span>
             <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/payments"
-               class="step" data-translate="Payment"></a>
+               class="step" data-translate="Payments"></a>
         </div>
     </div>
 
