--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -39,16 +39,20 @@
 
             @using (Html.Authorize("purchase-orders.edit"))
             {
+                <button type="button" class="success" data-translate="Confirm" data-ng-click="controller.showConfirmDialog()"
+                        data-ng-hide="controller.purchaseOrder.confirmed"></button>
                 <a href="/purchase-orders/edit/{{controller.purchaseOrder.id}}" class="as-button" data-translate="Edit"
                     data-ng-hide="controller.purchaseOrder.confirmed"></a>
                 <button type="button" class="danger" data-translate="Remove" data-ng-click="controller.showRemoveDialog()"
                         data-ng-hide="controller.purchaseOrder.confirmed"></button>
+                <button type="button" class="danger" data-translate="Revert" data-ng-click="controller.showRevertDialog()"
+                        data-ng-show="controller.purchaseOrder.confirmed"></button>
             }
         </div>
 
         <div class="card">
             <div class="box">
-                <span class="hint success" data-ng-show="controller.purchaseOrder.confirmed" data-translate="Confirmed purchase"></span>
+                <span class="hint success" data-ng-show="controller.purchaseOrder.confirmed" data-translate="Confirmed"></span>
             </div>
 
             <div class="grid-row">
@@ -102,6 +106,8 @@
 
     @using (Html.Authorize("purchase-orders.edit"))
     {
+        @Html.Partial("~/Views/Inventory/PurchaseOrders/_ConfirmPurchaseOrder.cshtml")
         @Html.Partial("~/Views/Inventory/PurchaseOrders/_RemovePurchaseOrder.cshtml")
+        @Html.Partial("~/Views/Inventory/PurchaseOrders/_RevertPurchaseOrder.cshtml")
     }
 </div>
