--- a/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
@@ -41,7 +41,7 @@
         }
 
         <div class="box" >
-            <span class="hint success" data-translate="Sale billed" data-ng-show="controller.saleOrder.confirmed"></span>
+            <span class="hint success" data-translate="Billed" data-ng-show="controller.saleOrder.confirmed"></span>
         </div>
 
         <div class="card list">
