--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
@@ -50,11 +50,11 @@
             }
         </div>
 
-        <div class="card">
-            <div class="box">
-                <span class="hint success" data-ng-show="controller.saleOrder.confirmed" data-translate="Sale billed"></span>
-            </div>
+        <div class="box">
+            <span class="hint success" data-ng-show="controller.saleOrder.confirmed" data-translate="Billed"></span>
+        </div>
 
+        <div class="card">
             <div class="grid-row">
                 <div class="grid-column compact-6 small-6 medium-6 large-6">
                     <div class="box">
