--- a/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
@@ -41,7 +41,7 @@
         }
 
         <div class="box">
-            <span class="hint success" data-translate="Sale billed" data-ng-show="controller.purchaseOrder.confirmed"></span>
+            <span class="hint success" data-translate="Billed" data-ng-show="controller.purchaseOrder.confirmed"></span>
         </div>
 
         <div class="card list">
