--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -56,16 +56,27 @@
             </div>
 
             <div class="grid-row">
-                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                <div class="grid-column medium-6 large-6">
                     <div class="box">
                         <label data-translate="Store"></label>
                         <strong data-ng-bind="controller.purchaseOrder.store.name"></strong>
                     </div>
                 </div>
-                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                    <div class="box">
-                        <label data-translate="Issue date"></label>
-                        <strong data-ng-bind="controller.purchaseOrder.issueDate | moment:'shortDate'"></strong>
+                <div class="grid-column medium-6 large-6">
+                    <div class="grid-row">
+                        <div class="grid-column compact-6 small-6 medium-6 large-6">
+                            <div class="box">
+                                <label data-translate="Issue date"></label>
+                                <strong data-ng-bind="controller.purchaseOrder.issueDate | moment:'shortDate'"></strong>
+                            </div>
+                        </div>
+                        <div class="grid-column compact-6 small-6 medium-6 large-6">
+                            <div class="box">
+                                <label data-translate="Invoice number"></label>
+                                <strong data-ng-bind="controller.purchaseOrder.invoiceNumber"></strong>
+                                <strong data-ng-hide="controller.purchaseOrder.invoiceNumber">-</strong>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
