--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderEdit.cshtml
@@ -50,31 +50,22 @@
 
                 <div class="card">
                     <div class="grid-row">
-                        <div class="grid-column small-6 medium-6 large-6">
-                            <div class="box" data-has-error="controller.purchaseOrderForm.store.$invalid">
-                                <label>
-                                    <span data-translate="Store"></span>
-                                    <span class="text-danger">*</span>
-                                    <em class="font-10 text-muted" data-translate="Loading" data-ng-show="controller.searchingStores"></em>
-                                </label>
-                                <select name="store" data-ng-model="controller.purchaseOrder.store" required
-                                        data-ng-options="store as store.name for store in controller.storeList track by store.id"
-                                        data-ng-disabled="controller.searchingStores"></select>
-                            </div>
-                        </div>
-                        <div class="grid-column small-6 medium-6 large-6">
+                        <div class="grid-column medium-6 large-6">
                             <div class="grid-row">
-                                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                    <div class="box" data-has-error="controller.purchaseOrderForm.issueDate.$invalid">
+                                <div class="grid-column small-6 medium-6 large-6">
+                                    <div class="box" data-has-error="controller.purchaseOrderForm.store.$invalid">
                                         <label>
-                                            <span data-translate="Issue date"></span>
+                                            <span data-translate="Store"></span>
                                             <span class="text-danger">*</span>
+                                            <em class="font-10 text-muted" data-translate="Loading"
+                                                data-ng-show="controller.searchingStores"></em>
                                         </label>
-                                        <input type="text" name="issueDate" data-ng-model="controller.purchaseOrder.issueDate"
-                                               data-type-date required />
+                                        <select name="store" data-ng-model="controller.purchaseOrder.store" required
+                                                data-ng-options="store as store.name for store in controller.storeList track by store.id"
+                                                data-ng-disabled="controller.searchingStores"></select>
                                     </div>
                                 </div>
-                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                <div class="grid-column small-6 medium-6 large-6">
                                     <div class="box">
                                         <label>
                                             <span data-translate="Wallet"></span>
@@ -90,11 +81,33 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="grid-column medium-6 large-6">
+                            <div class="grid-row">
+                                <div class="grid-column small-6 medium-6 large-6">
+                                    <div class="box" data-has-error="controller.purchaseOrderForm.issueDate.$invalid">
+                                        <label>
+                                            <span data-translate="Issue date"></span>
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="text" name="issueDate" data-ng-model="controller.purchaseOrder.issueDate"
+                                               data-type-date required />
+                                    </div>
+                                </div>
+                                <div class="grid-column small-6 medium-6 large-6">
+                                    <div class="box">
+                                        <label data-translate="Invoice number"></label>
+                                        <input type="text" name="invoiceNumber"
+                                               data-ng-model="controller.purchaseOrder.invoiceNumber" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="box" data-has-error="controller.purchaseOrderForm.additionalInformation.$invalid">
                         <label data-translate="Additional information"></label>
-                        <textarea rows="5" name="additionalInformation" data-ng-model="controller.purchaseOrder.additionalInformation"
+                        <textarea rows="5" name="additionalInformation"
+                                  data-ng-model="controller.purchaseOrder.additionalInformation"
                                   data-ng-maxlength="255"></textarea>
                     </div>
                 </div>
