--- a/src/Dyoub.App/Views/Inventory/PurchasePayments/PurchasePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasePayments/PurchasePaymentsEdit.cshtml
@@ -58,41 +58,50 @@
 
                 <div class="card">
                     <div class="grid-row">
-                        <div class="grid-column small-6 medium-6 large-6">
-                            <div class="grid-row">
-                                <div class="grid-column tiny-6 compact-6 small-6 medium-6 large-6">
-                                    <div class="box">
-                                        <label data-translate="Purchase total"></label>
-                                        <strong class="font-14 text-success" data-ng-bind="controller.total | currency"></strong>
-                                    </div>
-                                </div>
-                                <div class="grid-column tiny-6 compact-6 small-6 medium-6 large-6">
-                                    <div class="box" data-has-error="">
-                                        <label>
-                                            <span data-translate="Discount"></span> (%)
-                                        </label>
-                                        <input type="text" name="discount" data-ng-model="controller.discount"
-                                               data-type-number="5,2" data-valid-number-min="0" data-valid-number-max="100"
-                                               data-ng-change="controller.calculateTotalPayable()" />
-                                    </div>
-                                </div>
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box">
+                                <label data-translate="Purchase total"></label>
+                                <strong class="font-14 text-success" data-ng-bind="controller.total | currency"></strong>
                             </div>
                         </div>
-                        <div class="grid-column small-6 medium-6 large-6">
-                            <div class="grid-row">
-                                <div class="grid-column tiny-6 compact-6 small-6 medium-6 large-6">
-                                    <div class="box">
-                                        <label data-translate="Total payable"></label>
-                                        <strong class="font-14 text-success" data-ng-bind="controller.totalPayable | currency"></strong>
-                                    </div>
-                                </div>
-                                <div class="grid-column tiny-6 compact-6 small-6 medium-6 large-6">
-                                    <div class="box">
-                                        <label data-translate="Total paid"></label>
-                                        <strong class="font-14" data-ng-class="{'text-success':controller.paidOut(),'text-danger':!controller.paidOut()}"
-                                                data-ng-bind="controller.totalPaid | currency"></strong>
-                                    </div>
-                                </div>
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box">
+                                <label data-translate="Total payable"></label>
+                                <strong class="font-14 text-success" data-ng-bind="controller.totalPayable | currency"></strong>
+                            </div>
+                        </div>
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box">
+                                <label data-translate="Total paid"></label>
+                                <strong class="font-14" data-ng-class="{'text-success':controller.paidOut(),'text-danger':!controller.paidOut()}"
+                                        data-ng-bind="controller.totalPaid | currency"></strong>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="grid-row">
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box" data-has-error="controller.paymentsForm.discount.$invalid">
+                                <label>
+                                    <span data-translate="Discount"></span> (%)
+                                </label>
+                                <input type="text" name="discount" data-ng-model="controller.discount"
+                                       data-type-number="5,2" data-valid-number-min="0" data-valid-number-max="100"
+                                       data-ng-change="controller.calculateTotalPayable()" />
+                            </div>
+                        </div>
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box">
+                                <label data-translate="Shipping cost"></label>
+                                <input type="text" name="shippingCost" data-ng-model="controller.shippingCost"
+                                       data-type-number="8,2" data-ng-change="controller.calculateTotalPayable()" />
+                            </div>
+                        </div>
+                        <div class="grid-column small-4 medium-4 large-4">
+                            <div class="box">
+                                <label data-translate="Other taxes"></label>
+                                <input type="text" name="otherTaxes" data-ng-model="controller.otherTaxes"
+                                       data-type-number="8,2" data-ng-change="controller.calculateTotalPayable()" />
                             </div>
                         </div>
                     </div>
