--- a/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseSupplier/PurchaseSupplierDetails.cshtml
@@ -41,7 +41,7 @@
         }
 
         <div class="box">
-            <span class="hint success" data-translate="Purchase billed" data-ng-show="controller.purchaseOrder.confirmed"></span>
+            <span class="hint success" data-translate="Confirmed" data-ng-show="controller.purchaseOrder.confirmed"></span>
         </div>
 
         <div class="card">
