--- a/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
@@ -93,7 +93,7 @@
             <a href="/dashboard/inventory" class="as-button card carrot">
                 <div class="card-info">
                     <div data-translate="Suppliers"></div>
-                    <div data-translate="Products stock"></div>
+                    <div data-translate="Product stock"></div>
                     <div data-translate="Purchase orders"></div>
                     <div data-translate="Transfer orders"></div>
                     <div data-translate="Other movements"></div>
