--- a/src/Dyoub.App/Views/Account/Dashboard/Inventory.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Inventory.cshtml
@@ -68,17 +68,15 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" data-href="/products-stock" class="card carrot" disabled>
+            <a href="/product-stock" class="as-button card carrot">
                 <div class="card-info">
-                    <div data-translate="This month"></div>
-                    <div class="value" data-ng-bind="controller.overview.counter.productsStock | currency"></div>
                     <i class="fa fa-clipboard"></i>
                 </div>
                 <div class="card-title">
-                    <span data-translate="Products stock"></span>
+                    <span data-translate="Product stock"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
     </div>
 </div>
