--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -54,17 +54,17 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/rentals" class="as-button card emerald" disabled>
+            <a href="/rent-contracts" class="as-button card emerald">
                 <div class="card-info">
-                    <div data-translate="Today"></div>
-                    <div class="value" data-ng-bind="controller.overview.counter.rentals"></div>
+                    <div data-translate="This month"></div>
+                    <div class="value" data-ng-bind="controller.overview.counter.rentContracts"></div>
                     <i class="fa fa-share-square-o"></i>
                 </div>
                 <div class="card-title">
-                    <span data-translate="Rentals"></span>
+                    <span data-translate="Rent contracts"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
     </div>
 </div>
